@@ -1,15 +1,12 @@
 package utils;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 public class UserFormDataParser {
-    private static final Logger logger = LoggerFactory.getLogger(UserFormDataParser.class);
     private String data;
     public UserFormDataParser(String data) {
         this.data = data;
@@ -20,7 +17,13 @@ public class UserFormDataParser {
                 .map(it -> it.split("=", 2))
                 .collect(Collectors.toMap(
                         it -> it[0],
-                        it -> URLDecoder.decode(it.length > 1 ? it[1] : "", StandardCharsets.UTF_8),
+                        it -> {
+                            try {
+                                return URLDecoder.decode(it.length > 1 ? it[1] : "", "UTF-8");
+                            } catch (UnsupportedEncodingException e) {
+                                throw new RuntimeException(e);
+                            }
+                        },
                         (existing, replacement) -> existing
                 ));
     }
